# monty-go

./: .gitignore  .golangci.yml  Cargo.toml  Makefile  README.md  benchmark_test.go  compileandrun_leak_test.go  convert.go  convert_test.go  dataclass.go  doc.go  errors.go  errors_test.go  exec_test.go  fsmount.go  function.go  function_test.go  go.mod  helper_test.go  hostpanic_test.go  inputs.go  inputs_test.go  json.go  json_test.go  keepalive_test.go  limits.go  limits_test.go  options.go  options_test.go  os.go  os_test.go  program.go  program_test.go  progress.go  progress_test.go  regression_test.go  repl.go  repl_test.go  run.go  rust-toolchain.toml  (+4 more)
.github/workflows/: build-ffi.yml  ci.yml  embedded-ffi.yml  release.yml
benchmarks/: README.md  compare.py
crates/monty-ffi/: Cargo.toml
crates/monty-ffi/src/: error.rs  lib.rs  mount.rs  print.rs  program.rs  progress.rs  repl.rs  tracker.rs  typecheck.rs  value.rs
examples/async/: main.go
examples/basic/: main.go
examples/function/: main.go
examples/repl/: main.go
examples/snapshot/: main.go
internal/ffi/: embedded.go  embedded_default.go  embedded_noembed.go  embedded_test.go  exec.go  ffi.go  layout_test.go  loader_test.go  syscall_linkname.go  value.go
scripts/: install-ffi-library.sh
